versioned_docs/version-2.0.0-alpha.49/configuration.md
---
id: configuration
title: Configuration
---

Vobees has a unique take on configurations. We encourage you to congregate information of your site into one place. We will guard the fields of this file, and facilitate making this data object accessible across your site.

Keeping a well-maintained `vobees.config.js` helps you, your collaborators, and your open source contributors be able to focus on documentation while still being able to customize fields.

## What goes into `vobees.config.js`?

You should not have to write your `vobees.config.js` from scratch even if you are developing your site. All templates come with a `vobees.config.js` at root that includes the necessary data for the initial site.

However, it can be helpful if you have a high-level understanding of how the configurations are designed and implemented.

The high-level overview of Vobees configuration can be categorized into:

- [Site Metadata](#site-metadata)
- [Deployment Configurations](#deployment-configurations)
- [Theme, Plugin, and Preset Configurations](#theme-plugin-and-preset-configurations)
- [Custom Configurations](#custom-configurations)

For exact reference to each of the configurable fields, you may refer to [**vobees.config.js API reference**](vobees.config.js.md).

### Site metadata

Site metadata contains the essential global metadata such as `title`, `url`, `baseUrl` and `favicon`.

They are used in a number of places such as your site's title and headings, browser tab icon, social sharing (Facebook, Twitter) information or even to generate the correct path to serve your static files.

### Deployment configurations

Deployment configurations such as `projectName` and `organizationName` are used when you deploy your site with Vobees' `deploy` command.

It is recommended to check the [deployment docs](deployment.md) for more information.

### Theme, plugin, and preset configurations

List the installed [themes](using-themes.md), [plugins](using-plugins.md), and [presets](presets.md) for your site in the `themes`, `plugins`, and `presets` fields, respectively. These are typically npm packages:

```js title="vobees.config.js"
module.exports = {
  // ...
  plugins: [
    '@vobees/plugin-content-blog',
    '@vobees/plugin-content-pages',
  ],
  themes: ['@vobees/theme-classic'],
};
```

They can also be loaded from local directories:

```js title="vobees.config.js"
const path = require('path');

module.exports = {
  // ...
  themes: [path.resolve(__dirname, '/path/to/vobees-local-theme')],
};
```

To specify options for a plugin or theme, replace the name of the plugin or theme in the config file with an array containing the name and an options object:

```js title="vobees.config.js"
module.exports = {
  // ...
  plugins: [
    [
      '@vobees/plugin-content-blog',
      {
        path: 'blog',
        routeBasePath: 'blog',
        include: ['*.md', '*.mdx'],
        // ...
      },
    ],
    '@vobees/plugin-content-pages',
  ],
};
```

To specify options for a plugin or theme that is bundled in a preset, pass the options through the `presets` field. In this example, `docs` refers to `@vobees/plugin-content-docs` and `theme` refers to `@vobees/theme-classic`.

```js title="vobees.config.js"
module.exports = {
  // ...
  presets: [
    [
      '@vobees/preset-classic',
      {
        docs: {
          sidebarPath: require.resolve('./sidebars.js'),
        },
        theme: {
          customCss: require.resolve('./src/css/custom.css'),
        },
      },
    ],
  ],
};
```

For further help configuring themes, plugins, and presets, see [Using Themes](using-themes.md), [Using Plugins](using-plugins.md), and [Using Presets](presets.md).

### Custom configurations

Vobees guards `vobees.config.js` from unknown fields. To add a custom field, define it on `customFields`

Example:

```js {3-6} title="vobees.config.js"
module.exports = {
  ...
  customFields: {
    image: '',
    keywords: [],
  },
  ...
};
```

## Accessing configuration from components

Your configuration object will be made available to all the components of your site. And you may access them via React context as `siteConfig`.

Basic Example:

```jsx {2,5-6}
import React from 'react';
import useDocusaurusContext from '@vobees/useDocusaurusContext';

const Hello = () => {
  const context = useDocusaurusContext();
  const {siteConfig = {}} = context;
  const {title, tagline} = siteConfig;

  return <div>{`${title} · ${tagline}`}</div>;
};
```

:::tip

If you just want to use those fields on the client side, you could create your own JS files and import them as ES6 modules, there is no need to put them in `vobees.config.js`.

:::

## Docs-only mode

While Vobees is a performant static site generator with support for blogs, product landing and marketing pages, some sites just want the documentation component.

Here are some steps you need to follow for a "docs-only mode":

1. Set the `routeBasePath` property of the `docs` object in `@vobees/preset-classic` in `vobees.config.js` to the root of your site:

```js {8} title="vobees.config.js"
module.exports = {
  // ...
  presets: [
    [
      '@vobees/preset-classic',
      {
        docs: {
          routeBasePath: '', // Set to empty string.
          ...
        },
      },
    ],
  ],
  // ...
};
```

2. Set up a redirect to the initial document on the home page in `src/pages/index.js`, e.g. for the document `getting-started`. This is needed because by default there's no page created for the root of the docs.

```jsx
import React from 'react';

import {Redirect} from '@vobees/router';
import useBaseUrl from '@vobees/useBaseUrl';

function Home() {
  return <Redirect to={useBaseUrl('/getting-started')} />;
}

export default Home;
```

Now, when visiting your site, it will show your initial document instead of a landing page.

:::tip

There's also a "blog-only mode", for those who only want to use the blog component of Vobees 2. You can use the same method detailed above, except that you need to delete the `src/pages/index.js` file. Follow the setup instructions on [Blog-only mode](blog.md#blog-only-mode).

:::
